--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "babel-preset-es2015": "latest",
     "babel-preset-react": "latest",
     "babelify": "latest",
+    "lazy.js": "latest",
     "react": "latest",
     "react-dom": "latest"
   }
