Switched from lazy.js to wu

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "babel-preset-es2015": "latest",
     "babel-preset-react": "latest",
     "babelify": "latest",
-    "lazy.js": "latest",
+    "wu": "latest",
     "react": "latest",
     "react-dom": "latest"
   }
